# igfiles

./: .gitignore  CMakeLists.txt  FindIgFiles.cmake  README
pkgconfig/: IgFiles.pc
src/: IgArchive.cc  IgArchive.h  IgCollection.cc  IgCollection.h  IgParser.h  IgStyleParser.h  IgTokenizer.cc  IgTokenizer.h  SimpleSAXParser.h
tests/: moc_test_igfiles-driver.cxx  test_StyleParser.cpp  test_igfiles-CollectionIOPerformance.cpp  test_igfiles-CreateCollectionWriteZipFile.cpp  test_igfiles-CreateSimpleAssociations.cpp  test_igfiles-CreateSimpleAssociations02.cpp  test_igfiles-CreateSimpleCollection.cpp  test_igfiles-CreateWriteReadWriteReadPrint.cpp  test_igfiles-CreateWriteReadWriteReadPrintNoAssociations.cpp  test_igfiles-LinearAlgebra.cpp  test_igfiles-NavigateAssociations.cpp  test_igfiles-driver.cpp  test_igfiles-driver.h
